# 01-ai-agent-for-ecommerce

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
_project-info/: ai-project-canvas.md
notebooks/: 01-test-llm-api.ipynb
src/chatbot-ui/: streamlit_app.py
